create project page, add basic elements

--- a/styles.css
+++ b/styles.css
@@ -132,3 +132,42 @@ h1{
     flex:1;
     flex-direction: column;
 }
+
+.project-section{
+    display:flex;
+    flex-direction: column;
+    background-color: rgb(158, 216, 161);
+    padding-left: 50px;
+    border-radius: 25px;
+    width:90%;
+    max-width: 100%;
+    padding:10px;
+    margin:75px;
+    margin-top:50px;
+}
+
+.project-section h1{
+    justify-content: center;
+}
+
+.projects-content-wrapper{
+    display:flex;
+    background-color:rgb(104, 216, 132);
+    width: 450px;
+    height: 450px;
+    border-radius: 25px;
+    align-items: start;
+    justify-content: center;
+    padding-top:20px;
+}
+
+.phonetic-alph-project{
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.phonetic-alph-project p{
+    max-width: 400px;
+}
